--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
     <link rel="stylesheet" href="menu_lateral/menu_lateral.css">
     <link rel="stylesheet" href="config.css">
 
-    <!--archivos de js-->
-    <link rel="stylesheet" href="contenidos/contenidos.js">
-    <link rel="stylesheet" href="footer/footer.js">
-    <link rel="stylesheet" href="header/header.js">
-    <link rel="stylesheet" href="menu_lateral/menu_lateral.js">
-
 
 </head>
 <body>
     
+    <header class="header"></header>
+    <section class="cuadro1"></section>
+    <section class="cuadro2"></section>
+    <footer class="footer"></footer>
+
+
+    <!--archivos de js-->
+    <script src="contenidos/contenidos.js"></script>
+    <script src="header/header.js"></script>
+    <script src="footer/footer.js"></script>
+    <script src="menu_lateral/menu_lateral.js"></script>
 </body>
 </html>
