--- a/cpu.html
+++ b/cpu.html
@@ -18,7 +18,7 @@
     
     <header class="header"></header>
     <section class="cuadro1"></section>
-    <section class="cuadro2"></section>
+    <section class="contenido1"></section>
     <footer class="footer"></footer>
 
 
@@ -27,5 +27,6 @@
     <script src="header/header.js"></script>
     <script src="footer/footer.js"></script>
     <script src="menu_lateral/menu_lateral.js"></script>
+    <script src="cpu.js"></script>
 </body>
 </html>
