--- a/ram.html
+++ b/ram.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="header/header.css">
     <link rel="stylesheet" href="index/index.css">
     <link rel="stylesheet" href="menu_lateral/menu_lateral.css">
+    <link rel="stylesheet" href="ram.css">
     <link rel="stylesheet" href="config.css">
 
 
