--- a/mg.html
+++ b/mg.html
@@ -28,5 +28,6 @@
     <script src="header/header.js"></script>
     <script src="footer/footer.js"></script>
     <script src="menu_lateral/menu_lateral.js"></script>
+    <script src="mg.js"></script>
 </body>
 </html>
