--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="header/header.css">
     <link rel="stylesheet" href="index/index.css">
     <link rel="stylesheet" href="menu_lateral/menu_lateral.css">
-    <link rel="stylesheet" href="cpu.html">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
-    <link rel="stylesheet" href="gpu.html">
-    <link rel="stylesheet" href="mg.html">
-    <link rel="stylesheet" href="ram.html">
-    <link rel="stylesheet" href="ssd.html">
-    <link rel="stylesheet" href="fuente.html">
+    <link rel="stylesheet" href="cpu/cpu.html">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
+    <link rel="stylesheet" href="gpu/gpu.html">
+    <link rel="stylesheet" href="mg/mg.html">
+    <link rel="stylesheet" href="ram/ram.html">
+    <link rel="stylesheet" href="ssd/ssd.html">
+    <link rel="stylesheet" href="fuente/fuente.html">
     <link rel="stylesheet" href="config.css">
 
 
